# NixBoost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  shell.nix
.github/workflows/: release.yml
src/: arch.rs  cli.rs  main.rs  nix_manager.rs  nur.rs  updater.rs  utils.rs
src/cache/: disk_cache.rs  invalidation.rs  memory_cache.rs  mod.rs
src/cli/: args.rs  mod.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/network/: client.rs  mod.rs
src/nur/: client.rs  mod.rs
src/package/: manager.rs  mod.rs
src/search/: engine.rs  mod.rs
src/system/: garbage_collector.rs  generations.rs  health.rs  mod.rs
src/ui/: mod.rs  output.rs  progress.rs
src/utils/: mod.rs  news.rs  updater.rs
