[package]
name = "nixboost"
version = "2.0.0"
edition = "2021"
authors = ["NixBoost Team"]
description = "High-performance NixOS package manager frontend"
repository = "https://github.com/NacreousDawn596/nixboost"
license = "GPL-3.0"
keywords = ["nix", "nixos", "package-manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# CLI & Async Runtime
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4.5"
tokio = { version = "1", features = ["full", "process"] }
futures = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Configuration
toml = "0.8"
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP & Networking
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }
ureq = { version = "2.9", features = ["json"] }
url = "2.5"

# Database & Caching
rusqlite = { version = "0.31", features = ["bundled"] }
lru = "0.12"
parking_lot = "0.12"

# Search & Parallelism
fuzzy-matcher = "0.3"
rayon = "1.10"
dashmap = "5.5"

# Graphs
petgraph = "0.6"

# UI
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
dialoguer = "0.10"

# RSS Feeds
rss = "2.0"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
pretty_assertions = "1.4"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
